styles.css
/* ... */
/*
=============== 
Global Styles
===============
*/
.section {
  height: calc(var(--vh, 1vh) * 100);
}

html {
  scroll-behavior: smooth;
}

html,
body {
  overflow-x: hidden;
}

body {
  position: relative;
}

*,
::after,
::before {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: var(--ff-secondary);
  background: var(--clr-white);
  color: var(--clr-grey-1);
  line-height: 1.5;
  font-size: 0.875rem;
}

ul {
  list-style-type: none;
}

a {
  text-decoration: none;
}

img {
  max-width: 100%;
}

img {
  display: block;
  user-select: none;
}

h1,
h2 {
  text-transform: capitalize;
  line-height: 1.25;
  margin-bottom: 0.75rem;
  font-family: var(--ff-primary);
}

h2 {
  letter-spacing: var(--spacing);
}

h3,
h4 {
  text-transform: capitalize;
  font-family: var(--ff-primary);
}

h1 {
  font-size: 3rem;
}

h2 {
  /* font-size: 2rem; */
  font-size: 1.5rem;
}

h3 {
  font-size: 1.25rem;
}

h4 {
  font-size: 0.875rem;
}

p {
  color: var(--clr-grey-5);
}

/*  global classes */

.btn {
  text-transform: uppercase;
  background: transparent;
  color: var(--clr-black);
  /* padding: 0.375rem 0.75rem; */
  letter-spacing: var(--spacing);
  display: inline-block;
  transition: var(--transition);
  font-size: 0.875rem;
  border: 2px solid var(--clr-black);
  cursor: pointer;
  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
  border-radius: var(--radius);
  width: 50%;
  margin: auto;
}

.btn:hover {
  color: var(--clr-white);
  background: var(--clr-black);
}

.btn-white {
  color: var(--clr-white);
  border-color: var(--clr-white);
  border-radius: 0;
  padding: 0.5rem 1rem;
}

.btn:hover {
  background: var(--clr-white);
  color: var(--clr-secondary);
}

.title {
  padding-bottom: 5.5rem;
  text-align: center;
}

.title>h2 {
  text-transform: uppercase;
  padding-bottom: .5rem;
}


.title a {
  text-transform: capitalize;
}

.title span {
  color: var(--clr-primary-5);
  font-family: 'Dancing Script', cursive;
}

.title a {
  color: var(--clr-secondary);
}

.container {
  padding: 0 1rem;
}

.box {
  padding: 10px;
  margin-left: -10px;
  margin-top: -10px;
  border-radius: 50%;
  border: 1px solid #000;
  position: absolute;
  transform: scale(2);
}

.box.animateIt {
  animation: animBox .3s ease;
}

@keyframes animBox {
  50% {
    opacity: 1;
    transform: scale(1);
  }

  100% {
    opacity: 0;
    transform: scale(2.5);
  }
}

/*
========
Hero
========  
*/

.hero {
  height: 100vh;
  width: 100%;
  display: grid;
  place-items: center;
  position: relative;
  user-select: none;
}

.hero .container {
  transition: .5s all;
  position: relative;
}

.scroll-tip {
  width: 100%;
  position: absolute;
  /* bottom: -140%; */
  left: 50%;
  transform: translate(-50%, 700%);
  text-align: center;
  opacity: 0;
  width: fit-content;
  animation: scrollTip 2.5s 5s ease-in-out 3;
  /* font-size: 1rem; */
}

.scroll-tip i {
  font-size: 1.3rem;
}

@keyframes scrollTip {
  0% {
    transform: translate(-50%, 700%) scale(1);
    opacity: 0;
  }

  20% {
    transform: translate(-50%, 700%) scale(1);
    opacity: 0;
  }

  50% {
    transform: translate(-50%, 900%) scale(1.1);
    opacity: 1;
  }

  80% {
    transform: translate(-50%, 700%) scale(1);
    opacity: 0;
  }

  100% {
    transform: translate(-50%, 700%) scale(1);
    opacity: 0;
  }
}

.hero-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  min-height: 100vh;
  background-color: var(--clr-grey-10);
  opacity: 0;
  transition: all .8s ease;
  margin: auto;
  z-index: -1;
}

.resize-hero {
  width: 90%;
  margin: auto;
}


.hero-wrapper {
  padding: 1rem 0;
  display: flex;
  flex-direction: column;
  gap: 2rem;
  align-items: center;
  text-align: center;
  position: relative;
}

.hero .svg-container {
  width: 18rem;
  position: relative;
}

.hero h1 {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  position: absolute;
  width: 100%;
  opacity: 0;
}

.hero svg path {
  stroke-dasharray: 900;
  stroke-dashoffset: 900;
  /* stroke-dasharray: 800;
  stroke-dashoffset: 800; */
  fill: none;
  animation: dash 1.6s ease-in-out forwards, fill 1s 1.2s ease forwards;
}

@keyframes dash {
  to {
    stroke-dashoffset: 0;
  }
}

@keyframes fill {
  from {
    fill: transparent;
  }

  to {
    fill: rgb(23, 50, 69);
  }
}

.hero h1 {
  margin-bottom: 0;
}

.hero h2 {
  font-size: 1.3rem;
  transform: translateX(-10rem);
  font-family: 'Lato', sans-serif;
  font-weight: normal;
  opacity: 0;
  animation: appearH2 .5s ease 1.2s forwards;
  color: var(--clr-grey-5);
}

@keyframes appearH2 {
  to {
    transform: translateX(0);
    opacity: 1;
  }
}


.social-medias {
  position: absolute;
  top: 8rem;
  left: 10rem;
  display: flex;
  flex-direction: row;
  gap: 2rem;
  justify-content: space-around;
  width: 10rem;
  opacity: 0;
  animation: appearSocial .3s ease 1.3s forwards;
  z-index: 3;
}

@keyframes appearSocial {
  to {
    left: 4rem;
    opacity: 1;
  }
}



.hero p {
  font-size: 1.3rem;
  margin: 0 auto;
  line-height: 1.5;
  margin-bottom: 1.25rem;
}

.social-medias .fab,
.social-medias .fa-solid {
  font-size: 1.5rem;
  color: var(--clr-grey-1);
  transition: .3s;
}

.social-medias li a:hover .fa-linkedin {
  transform: scale(1.2);
}

.social-medias li a:hover .fa-github {
  transform: scale(1.2);
}

.social-medias li a:hover .fa-envelope {
  transform: scale(1.2);
}


.water-drop {
  width: 1px;
  height: 1px;
  margin: auto;
  position: absolute;
  inset: 0;
  border-radius: 50%;
  animation: drop 1s 1.2s;
  opacity: 0;
}



@keyframes drop {
  10% {
    opacity: 1;
    transform: scale(1);
  }

  100% {
    transform: scale(10);
    opacity: 0;
  }
}



.cv-button {
  padding: 1rem;
  cursor: pointer;
}

.mail-list a {
  position: relative;
}
/* ... */

